- Fixed being popup getting stuck under the mouse
- Fixed item links with empty item name to look up name from Item DB
- Fixed spaces getting added to chat every 50 characters
- Fixed handling of consecutive text formatting markers
- Fixed empty Equipment window on freshly created character
- Fixed choosing default world when using -D command-line parameter
- Updated to tmwAthena protocol changes
- Updated to Manaserv protocol changes (specials, guilds, debug mode, skills, text particles)
- CMake: Use GNUInstallDirs and made PKG_DATADIR / PKG_BINDIR paths modifiable
- CMake: Don't overwrite system/environment CXXFLAGS
- CMake: Added option to use system ENet
- CMake: Make using system Guichan optional (also available as submodule)
- CMake: Allow using CPack to generate an NSIS installer and macOS App Bundle
- Now requires C++17
- Updated Russian translation

0.6.1 (2 April 2012)
- Made it easier to click beings that are next to other beings
- Removed NPC trade messages from chat (again)
- Fixed swapping of ring and necklace equipment slots
- Fixed problems with using the last emote
- Fixed drawing order of particles
- Fixed manaserv-enabled builds
- Fixed category of mana.desktop file
- Fixed display of server description
- Fixed issues with rendering very small maps
- Fixed compile for Mac OSX and reintroduced Xcode project
- Updated Finnish, Brazilian Portuguese and Polish translations

0.6.0 (12 February 2012)
- Added support for a larger number of character slots
- Added scrolling to tab bars when there isn't enough space
- Added a search bar to storage and inventory windows
- Added chat logging
- Added a screen shake effect when the character dies
- Added item quantity in the shop list
- Added customizable hit and attack effects
- Added support for floor item sprites
- Added support for different target cursor sizes for NPCs
- Added background support to the equipment boxes
- Added offsetX/Y to 'imageset' element that applies to all its frames