@@ -52,6 +52,7 @@
 - Fixed handling of consecutive text formatting markers
 - Fixed empty Equipment window on freshly created character
 - Fixed choosing default world when using -D command-line parameter
+- Fixed storing of player relations
 - Updated to tmwAthena protocol changes
 - Updated to Manaserv protocol changes (specials, guilds, debug mode, skills, text particles)
 - CMake: Use GNUInstallDirs and made PKG_DATADIR / PKG_BINDIR paths modifiable
